k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rt-chat-api
  labels:
    app: rt-chat-api
spec:
  type: ClusterIP
  selector:
    app: rt-chat-api
  ports:
    - name: http
      port: 80
      targetPort: http
